syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesstatefulset.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesstatefulset/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesstatefulset/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// KubernetesStatefulSet is a deployment component for running stateful applications on Kubernetes.
// StatefulSets are used for applications that require stable, unique network identifiers,
// stable persistent storage, ordered graceful deployment and scaling, and ordered automated rolling updates.
message KubernetesStatefulSet {
  // api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  // resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesStatefulSet'];

  // metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // spec
  KubernetesStatefulSetSpec spec = 4 [(buf.validate.field).required = true];

  // status
  KubernetesStatefulSetStatus status = 5;
}

// KubernetesStatefulSetStatus represents the status of a KubernetesStatefulSet resource.
message KubernetesStatefulSetStatus {
  // stack-outputs
  KubernetesStatefulSetStackOutputs outputs = 1;
}
