syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesstatefulset.v1;

// KubernetesStatefulSetStackOutputs contains the outputs from deploying a KubernetesStatefulSet.
message KubernetesStatefulSetStackOutputs {
  // Kubernetes namespace in which the stateful set is deployed.
  string namespace = 1;

  // Kubernetes headless service name for the stateful set.
  // This service enables stable network identity for pods.
  // Pod DNS: <pod-name>.<headless-service>.<namespace>.svc.cluster.local
  string headless_service = 2;

  // Kubernetes ClusterIP service name for client access (if ports are defined).
  // This service provides load-balanced access to stateful set pods.
  string service = 3;

  // Command to setup port-forwarding to access the stateful set from a local machine.
  // Example: kubectl port-forward svc/<service> -n <namespace> 8080:8080
  string port_forward_command = 4;

  // Kubernetes endpoint for internal access.
  // Example: <service>.<namespace>.svc.cluster.local:8080
  string kube_endpoint = 5;

  // Public endpoint for external access (if ingress is enabled).
  // Example: https://myapp.example.com
  string external_hostname = 6;

  // Internal endpoint for access within the cluster (if ingress is enabled).
  // Example: https://internal-myapp.example.com
  string internal_hostname = 7;
}
